feat: 添加Clash代理功能和公网访问支持
- 新增Clash代理服务集成
- 添加浏览器代理配置功能
- 实现公网隧道访问支持
- 优化代理池和IP定位服务
- 更新UI界面和通知系统
- 添加相关文档和配置文件

--- a/templates/home.html
+++ b/templates/home.html
@@ -2048,7 +2048,7 @@ document.addEventListener('DOMContentLoaded', function() {
         'life': '/tools/life/',
         'work': '/tools/work/',
         'training': '/tools/training/',
-        'cyberpunk': '/tools/emo/'
+        'emo': '/tools/emo_mode/'
       };
       
       // 跳转到对应的工具页面
